--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <a href="#projetos"><i class="fa-solid fa-dragon"></i> Projetos</a>
         <a href="#skills"><i class="fa-solid fa-sitemap"></i> Habilidades</a>
         <a href="#contato"><i class="fa-solid fa-address-card"></i> Contato</a>
+        <button id="btnSom" class="btn-som" title="Ligar/Desligar Som">
+          <i class="fa-solid fa-volume-high"></i>
+        </button>
       </nav>
     </header>
 
